--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "flashy",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node" : ">= 14.0.0",
+    "npm" : ">= 8.00.00",
+    "yarn" : "please-use-npm"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
