--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,11 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": [
+  "next",
+  "next/core-web-vitals",
+  "eslint:recommended"
+],
+  "globals": {
+    "React": "readonly"
+  },
+  
 }
