--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node" : ">= 14.0.0",
-    "npm" : ">= 8.00.00",
-    "yarn" : "please-use-npm"
+    "node": ">= 14.0.0",
+    "npm": ">= 7.0.0",
+    "yarn": "please-use-npm"
   },
   "scripts": {
     "dev": "next dev",
@@ -14,12 +14,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
     "eslint": "8.26.0",
-    "eslint-config-next": "12.3.1"
+    "eslint-config-next": "12.3.1",
+    "prettier": "^2.7.1"
   }
 }
