--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prettier": "prettier --write"
+    "prettier": "prettier --write",
+    "prepare": "husky install"
   },
   "dependencies": {
     "axios": "^1.1.3",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "eslint": "8.26.0",
     "eslint-config-next": "12.3.1",
+    "husky": "^8.0.1",
     "prettier": "^2.7.1"
   }
 }
