--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0",
     "eslint": "8.26.0",
     "eslint-config-next": "12.3.1",
     "husky": "^8.0.1",
