--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "axios": "^1.1.3",
+    "daisyui": "^2.33.0",
     "framer-motion": "^6.5.1",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-simple-typewriter": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.19.6",
