--- a/package.json
+++ b/package.json
@@ -20,13 +20,25 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.0.11",
     "@chakra-ui/react": "^2.3.6",
-    "@emotion/react": "^11.10.4",
+    "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.4",
+    "@mantine/carousel": "^5.6.3",
+    "@mantine/core": "^5.6.3",
+    "@mantine/dates": "^5.6.3",
+    "@mantine/dropzone": "^5.6.3",
+    "@mantine/hooks": "^5.6.3",
+    "@mantine/modals": "^5.6.3",
+    "@mantine/notifications": "^5.6.3",
+    "@mantine/rte": "^5.6.3",
+    "@mantine/spotlight": "^5.6.3",
     "axios": "^1.1.3",
     "daisyui": "^2.33.0",
+    "dayjs": "^1.11.6",
+    "embla-carousel-react": "^7.0.3",
     "framer-motion": "^6.5.1",
     "next": "12.3.1",
     "react": "18.2.0",
+    "react-awesome-reveal": "^4.1.0",
     "react-dom": "18.2.0",
     "react-simple-typewriter": "^4.0.5"
   },
