--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "18.2.0",
     "react-awesome-reveal": "^4.1.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.6.0",
     "react-simple-typewriter": "^4.0.5",
     "yup": "^0.32.11"
   },
