--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "daisyui": "^2.33.0",
     "dayjs": "^1.11.6",
     "embla-carousel-react": "^7.0.3",
+    "emoji-picker-react": "^4.4.4",
     "formik": "^2.2.9",
     "framer-motion": "^6.5.1",
     "next": "12.3.1",
